# ros2_auto_docking

./: README.md
automatic_parking/auto_dock/include/: auto_dock.h  pattern.h
automatic_parking/auto_dock/launch/: auto_humble.launch.py
docking_ws/: AUTO DOCKING.docx
docking_ws/src/automatic_parking/auto_dock/: CMakeLists.txt  package.xml
docking_ws/src/automatic_parking/auto_dock/include/: controller.h
docking_ws/src/automatic_parking/auto_dock/rviz/: rviz.rviz
docking_ws/src/automatic_parking/auto_dock/src/: controller.cpp  pattern.cpp
docking_ws/src/laser_line_extraction/include/laser_line_extraction/: line_extraction.h  line_extraction_node.h  line_extraction_ros.h
docking_ws/src/laser_line_extraction/install/: setup.sh
docking_ws/src/laser_line_extraction/install/laser_line_extraction/share/laser_line_extraction/: package.bash  package.zsh
docking_ws/src/laser_line_msgs/: CMakeLists.txt  package.xml
docking_ws/src/laser_line_msgs/msg/: LineSegment.msg  LineSegmentList.msg
laser_line_extraction/: CMakeLists.txt
laser_line_extraction/include/laser_line_extraction/: line.h
laser_line_extraction/install/: local_setup.sh
laser_line_extraction/laser_line_msgs/: README.md
laser_line_extraction/log/: latest_build
