<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_dock</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rachelyoung0407@gmail.com">iven</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>laser_line_extraction</depend>
  <depend>laser_line_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
